fix : new animation check, add flexwrap

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -45,6 +45,7 @@ img {
 .menu__container {
   @media (min-width: 768px) {
     display: flex;
+    flex-wrap: wrap;
   }
 }
 
