--- a/sass/main.css
+++ b/sass/main.css
@@ -100,6 +100,7 @@ img {
 @media (min-width: 768px) {
   .menu__container {
     display: flex;
+    flex-wrap: wrap;
   }
 }
 
@@ -436,7 +437,7 @@ html {
 }
 @media (min-width: 768px) {
   .menu__card__1 {
-    width: calc(25% - 20px);
+    width: calc(50% - 20px);
     margin-left: 10px;
     margin-right: 10px;
   }
@@ -493,11 +494,8 @@ html {
   /* en reprenant de la place, le fa redevient visible car il ne déborde pas */
 }
 .menu__card:hover .menu__card__fa .fa-circle-check {
-  transform: rotate(360deg);
-}
-
-.fa-circle-check {
-  transition: transform 1s;
+  -webkit-animation: rotate 400ms linear;
+          animation: rotate 400ms linear;
 }
 
 .restaurant-title {
